Fix cokkies on IE

--- a/sass/page-main.scss
+++ b/sass/page-main.scss
@@ -2522,7 +2522,7 @@ $animateDur: 0.30s;
 
     .buttons {
         button {
-            position: static;
+            position: relative;
             line-height: 1;
             text-align: center;
             min-width: 116px;
